crates/app/sdk/macros/tests/fail/invalid_query.stderr
error: `#[query(...)]` cannot have arguments; queries cannot be payable
   --> tests/fail/invalid_query.rs:102:9
    |
102 |         #[query(payable)]
    |         ^^^^^^^^^^^^^^^^^

warning: unused import: `query`
  --> tests/fail/invalid_query.rs:85:35
   |
85 | use evolve_macros::{account_impl, query};
   |                                   ^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
